k8s/entertainment/yarr/templates/whatevarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatevarr
  labels:
    app: whatevarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatevarr
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: whatevarr
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: jackett-config
              mountPath: /config
        - name: sonarr
          image: linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: ssd2
              mountPath: /media/SSD2
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: ssd2
              mountPath: /media/SSD2
      restartPolicy: Always
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: jackett-config
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: ssd2
          hostPath:
            path: /media/SSD2
            type: Directory
